--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,165 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    margin: 0;
+    font-family: var(--default-font);
+}
+
+:root {
+    --default-font: "Inter", sans-serif;
+    --main-color: #1371E8;
+    --main-light-color: #e7f0fc;
+    --main-dark-color: #1165d0;
+}
+
+// #region default font sizes
+.fs-65 {
+    font-size: 0.65rem;
+}
+
+.fs-70 {
+    font-size: 0.7rem;
+}
+
+.fs-75 {
+    font-size: 0.75rem;
+}
+
+.fs-80 {
+    font-size: 0.8rem;
+}
+
+.fs-main {
+    font-size: 0.85rem;
+}
+
+.fs-90 {
+    font-size: 0.9rem;
+}
+
+.fs-95 {
+    font-size: 0.95rem;
+}
+
+.fs-default {
+    font-size: 1rem;
+}
+
+// #region theme colors
+.text-main {
+    color: var(--main-color);
+}
+
+.text-main-light {
+    color: var(--main-light-color);
+}
+
+.text-main-dark {
+    color: var(--main-dark-color);
+}
+
+.btn-main {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+.btn-main:hover {
+    background-color: var(--main-dark-color);
+    color: #fff;
+}
+
+.btn-main-light {
+    background-color: var(--main-light-color);
+    color: var(--main-color);
+}
+
+.btn-main-light:hover {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+.btn-main-dark {
+    background-color: var(--main-dark-color);
+    color: #fff;
+}
+
+.btn-main-dark:hover {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+.btn-main-outline {
+    border: 1px solid var(--main-color);
+    color: var(--main-color);
+    background-color: transparent;
+}
+
+.btn-main-outline:hover {
+    background-color: var(--main-color);
+    color: #fff;
+}
+
+.bg-main {
+    background-color: var(--main-color);
+}
+
+.bg-main-light {
+    background-color: var(--main-light-color);
+}
+
+.bg-main-dark {
+    background-color: var(--main-dark-color);
+}
+
+// #region page header
+.page-header {
+    display: flex;
+    align-items: center;
+    font-size: 0.85rem;
+    text-transform: uppercase;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+
+.page-header i {
+    font-size: 1.45rem;
+    margin-right: 0.3rem;
+    color: var(--main-color);
+}
+
+// #region form container
+.form-container .form-label {
+    font-size: 0.8rem;
+    font-weight: 600;
+    color: var(--bs-dark-text-emphasis);
+    margin-bottom: 3px;
+}
+
+.form-container .btn-group-vertical,
+.form-container .btn-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+}
+
+.form-container .btn-group-vertical label,
+.form-container .btn-group label {
+    font-size: 0.8rem;
+    border: solid 1px rgba(var(--bs-secondary-bg-rgb), var(--bs-bg-opacity)) !important;
+    border-radius: 0.375rem !important;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    padding-block: 6.6px;
+}
+
+.form-container .btn-group-vertical label:hover,
+.form-container .btn-group-vertical .btn-check:checked+.btn,
+.form-container .btn-group label:hover,
+.form-container .btn-group .btn-check:checked+.btn {
+    background-color: var(--bs-dark);
+    border: solid 1px var(--bs-dark);
+    color: #fff;
+}
+
+.form-container .season-icon {
+    width: 1.3rem;
+}
