--- a/src/styles.scss
+++ b/src/styles.scss
@@ -133,33 +133,27 @@ body {
     margin-bottom: 3px;
 }
 
-.form-container .btn-group-vertical,
 .form-container .btn-group {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     gap: 0.5rem;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-.form-container .btn-group-vertical label,
 .form-container .btn-group label {
     font-size: 0.8rem;
     border: solid 1px rgba(var(--bs-secondary-bg-rgb), var(--bs-bg-opacity)) !important;
     border-radius: 0.375rem !important;
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    padding-block: 6.6px;
 }
 
-.form-container .btn-group-vertical label:hover,
-.form-container .btn-group-vertical .btn-check:checked+.btn,
 .form-container .btn-group label:hover,
 .form-container .btn-group .btn-check:checked+.btn {
-    background-color: var(--bs-dark);
-    border: solid 1px var(--bs-dark);
-    color: #fff;
+    background-color: var(--main-light-color);
+    border: solid 1px var(--main-color) !important;
+    color: var(--main-color);
 }
 
 .form-container .season-icon {
-    width: 1.3rem;
+    width: 34px;
+    display: block;
+    margin: 5px auto;
 }
