Add new SVG images for animal stages and climate types
- Added pregnant.svg to represent the pregnant stage of animals.
- Added cold-wet.svg to depict cold and wet climate conditions.
- Added hot-dry.svg to illustrate hot and dry climate conditions.
- Added humid.svg to represent humid climate conditions.

--- a/src/app/modules/secure/prediction-form/prediction-form.component.html
+++ b/src/app/modules/secure/prediction-form/prediction-form.component.html
@@ -3,38 +3,79 @@
 </div>
 <div class="card rounded-3 form-container">
     <div class="card-body">
+        <!-- Season buttons -->
         <div class="mb-3">
             <div class="form-label">Season</div>
             <div class="btn-group" role="group">
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off">
-                <label class="btn" for="btnradio1">
+                <input type="radio" class="btn-check" name="btnSeason" id="btnSummer" autocomplete="off">
+                <label class="btn" for="btnSummer">
                     <img src="assets/images/season/summer.svg" alt="Summer" class="season-icon">
                     Summer
                 </label>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-                <label class="btn" for="btnradio2">
-                    <img src="assets/images/season/rainy.svg" alt="Summer" class="season-icon">
+                <input type="radio" class="btn-check" name="btnSeason" id="btnRainy" autocomplete="off">
+                <label class="btn" for="btnRainy">
+                    <img src="assets/images/season/rainy.svg" alt="Rainy" class="season-icon">
                     Rainy
                 </label>
 
-                <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-                <label class="btn" for="btnradio3">
-                    <img src="assets/images/season/winter.svg" alt="Summer" class="season-icon">
+                <input type="radio" class="btn-check" name="btnSeason" id="btnWinter" autocomplete="off">
+                <label class="btn" for="btnWinter">
+                    <img src="assets/images/season/winter.svg" alt="Winter" class="season-icon">
                     Winter
                 </label>
             </div>
         </div>
-
+        <!-- Climate Type -->
         <div class="mb-3">
             <div class="form-label">Climate Type</div>
-            <div class="btn-group-vertical w-100" role="group" aria-label="Vertical radio toggle button group">
-                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio1" autocomplete="off" checked>
-                <label class="btn btn-outline-danger" for="vbtn-radio1">Radio 1</label>
-                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio2" autocomplete="off">
-                <label class="btn btn-outline-danger" for="vbtn-radio2">Radio 2</label>
-                <input type="radio" class="btn-check" name="vbtn-radio" id="vbtn-radio3" autocomplete="off">
-                <label class="btn btn-outline-danger" for="vbtn-radio3">Radio 3</label>
+            <div class="btn-group w-100" role="group">
+                <input type="radio" class="btn-check" name="btnClimateType" id="btnHotDry" autocomplete="off">
+                <label class="btn" for="btnHotDry">
+                    <img src="assets/images/climate-type/hot-dry.svg" alt="Hot-Dry" class="season-icon">
+                    Hot-Dry
+                </label>
+                <input type="radio" class="btn-check" name="btnClimateType" id="btnHumid" autocomplete="off">
+                <label class="btn" for="btnHumid">
+                    <img src="assets/images/climate-type/humid.svg" alt="Humid" class="season-icon">
+                    Humid
+                </label>
+                <input type="radio" class="btn-check" name="btnClimateType" id="btnColdWet" autocomplete="off">
+                <label class="btn" for="btnColdWet">
+                    <img src="assets/images/climate-type/cold-wet.svg" alt="Cold-Wet" class="season-icon">
+                    Cold-Wet
+                </label>
+            </div>
+        </div>
+        <!-- animal stage -->
+        <div class="mb-3">
+            <div class="form-label">Animal Stage</div>
+            <div class="btn-group" role="group">
+                <input type="radio" class="btn-check" name="btnAnimalStage" id="btnCalf" autocomplete="off">
+                <label class="btn" for="btnCalf">
+                    <img src="assets/images/animal-stage/calf.svg" alt="Calf" class="season-icon">
+                    Calf
+                </label>
+                <input type="radio" class="btn-check" name="btnAnimalStage" id="btnHeifer" autocomplete="off">
+                <label class="btn" for="btnHeifer">
+                    <img src="assets/images/animal-stage/heifer.svg" alt="Heifer" class="season-icon">
+                    Heifer
+                </label>
+                <input type="radio" class="btn-check" name="btnAnimalStage" id="btnLactating" autocomplete="off">
+                <label class="btn" for="btnLactating">
+                    <img src="assets/images/animal-stage/lactating.svg" alt="Lactating" class="season-icon">
+                    Lactating
+                </label>
+                <input type="radio" class="btn-check" name="btnAnimalStage" id="btnPregnant" autocomplete="off">
+                <label class="btn" for="btnPregnant">
+                    <img src="assets/images/animal-stage/pregnant.svg" alt="Pregnant" class="season-icon">
+                    Pregnant
+                </label>
+                <input type="radio" class="btn-check" name="btnAnimalStage" id="btnAdult" autocomplete="off">
+                <label class="btn" for="btnAdult">
+                    <img src="assets/images/animal-stage/adult.svg" alt="Adult" class="season-icon">
+                    Adult
+                </label>
             </div>
         </div>
     </div>
