style: add shadow to navbar for improved visibility

--- a/src/app/layouts/secure/header/header.component.html
+++ b/src/app/layouts/secure/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body p-2 fixed-top">
+<nav class="navbar bg-body p-2 fixed-top shadow">
     <div class="d-flex align-items-center">
         <i class="lar la-user me-2"></i>
         <span class="fs-75 text-muted">Welcome User</span>
