--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,91 @@ body {
     --main-dark-color: #1165d0;
 }
 
+// #region bootstrap colors
+.text-blue {
+    color: var(--bs-blue) !important;
+}
+
+.bg-blue {
+    background-color: var(--bs-blue) !important;
+}
+
+.bg-blue-subtle {
+    background-color: rgba(13, 110, 253, 0.2) !important;
+}
+
+.text-indigo {
+    color: var(--bs-indigo) !important;
+}
+
+.bg-indigo {
+    background-color: var(--bs-indigo) !important;
+}
+
+.bg-indigo-subtle {
+    background-color: rgba(102, 16, 242, 0.2) !important;
+}
+
+.text-purple {
+    color: var(--bs-purple) !important;
+}
+
+.bg-purple {
+    background-color: var(--bs-purple) !important;
+}
+
+.bg-purple-subtle {
+    background-color: rgba(111, 66, 193, 0.2) !important;
+}
+
+.text-pink {
+    color: var(--bs-pink) !important;
+}
+
+.bg-pink {
+    background-color: var(--bs-pink) !important;
+}
+
+.bg-pink-subtle {
+    background-color: rgba(214, 51, 132, 0.2) !important;
+}
+
+.text-yellow {
+    color: var(--bs-yellow) !important;
+}
+
+.bg-yellow {
+    background-color: var(--bs-yellow) !important;
+}
+
+.bg-yellow-subtle {
+    background-color: rgba(255, 193, 7, 0.2) !important;
+}
+
+.text-teal {
+    color: var(--bs-teal) !important;
+}
+
+.bg-teal {
+    background-color: var(--bs-teal) !important;
+}
+
+.bg-teal-subtle {
+    background-color: rgba(32, 201, 151, 0.2) !important;
+}
+
+.text-cyan {
+    color: var(--bs-cyan) !important;
+}
+
+.bg-cyan {
+    background-color: var(--bs-cyan) !important;
+}
+
+.bg-cyan-subtle {
+    background-color: rgba(13, 202, 240, 0.2) !important;
+}
+
 // #region default font sizes
 .fs-65 {
     font-size: 0.65rem;
@@ -143,6 +228,9 @@ body {
     font-size: 0.8rem;
     border: solid 1px rgba(var(--bs-secondary-bg-rgb), var(--bs-bg-opacity)) !important;
     border-radius: 0.375rem !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .form-container .btn-group label:hover,
@@ -153,7 +241,7 @@ body {
 }
 
 .form-container .season-icon {
-    width: 34px;
+    width: 32px;
     display: block;
     margin: 5px auto;
 }
