--- a/src/app/modules/secure/prediction-form/prediction-form.component.html
+++ b/src/app/modules/secure/prediction-form/prediction-form.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
         <!-- Season buttons -->
         <div class="mb-3">
-            <div class="form-label">Season</div>
+            <div class="form-label text-pink">Season</div>
             <div class="btn-group" role="group">
                 <input type="radio" class="btn-check" name="btnSeason" id="btnSummer" autocomplete="off">
                 <label class="btn" for="btnSummer">
@@ -26,9 +26,10 @@
                 </label>
             </div>
         </div>
+
         <!-- Climate Type -->
         <div class="mb-3">
-            <div class="form-label">Climate Type</div>
+            <div class="form-label text-blue">Climate Type</div>
             <div class="btn-group w-100" role="group">
                 <input type="radio" class="btn-check" name="btnClimateType" id="btnHotDry" autocomplete="off">
                 <label class="btn" for="btnHotDry">
@@ -47,9 +48,10 @@
                 </label>
             </div>
         </div>
+
         <!-- animal stage -->
         <div class="mb-3">
-            <div class="form-label">Animal Stage</div>
+            <div class="form-label text-indigo">Animal Stage</div>
             <div class="btn-group" role="group">
                 <input type="radio" class="btn-check" name="btnAnimalStage" id="btnCalf" autocomplete="off">
                 <label class="btn" for="btnCalf">
@@ -75,6 +77,104 @@
                 <label class="btn" for="btnAdult">
                     <img src="assets/images/animal-stage/adult.svg" alt="Adult" class="season-icon">
                     Adult
+                </label>
+            </div>
+        </div>
+
+        <!-- behavior -->
+        <div class="mb-3">
+            <div class="form-label text-teal">Behavior</div>
+            <div class="btn-group" role="group">
+                <input type="radio" class="btn-check" name="btnBehavior" id="btnNormal" autocomplete="off">
+                <label class="btn" for="btnNormal">
+                    <img src="assets/images/behavior/normal.svg" alt="Normal" class="season-icon">
+                    Normal
+                </label>
+                <input type="radio" class="btn-check" name="btnBehavior" id="btnAggressive" autocomplete="off">
+                <label class="btn" for="btnAggressive">
+                    <img src="assets/images/behavior/aggressive.svg" alt="Aggressive" class="season-icon">
+                    Aggressive
+                </label>
+                <input type="radio" class="btn-check" name="btnBehavior" id="btnIsolated" autocomplete="off">
+                <label class="btn" for="btnIsolated">
+                    <img src="assets/images/behavior/isolated.svg" alt="Isolated" class="season-icon">
+                    Isolated
+                </label>
+                <input type="radio" class="btn-check" name="btnBehavior" id="btnLethargic" autocomplete="off">
+                <label class="btn" for="btnLethargic">
+                    <img src="assets/images/behavior/lethargic.svg" alt="Lethargic" class="season-icon">
+                    Lethargic
+                </label>
+                <input type="radio" class="btn-check" name="btnBehavior" id="btnRestless" autocomplete="off">
+                <label class="btn" for="btnRestless">
+                    <img src="assets/images/behavior/restless.svg" alt="Restless" class="season-icon">
+                    Restless
+                </label>
+            </div>
+        </div>
+
+        <!-- visible symptoms -->
+        <div class="mb-3">
+            <div class="form-label text-danger">Visible Symptoms <small class="text-muted fs-70">(Select all that
+                    apply)</small>
+            </div>
+            <div class="btn-group" role="group">
+                <input type="checkbox" class="btn-check" id="btnNasalDischarge" autocomplete="off">
+                <label class="btn" for="btnNasalDischarge">
+                    <img src="assets/images/visible-symptoms/nasal-discharge.svg" alt="Nasal Discharge"
+                        class="season-icon">
+                    Nasal Discharge
+                </label>
+
+                <input type="checkbox" class="btn-check" id="btnDiarrhea" autocomplete="off">
+                <label class="btn" for="btnDiarrhea">
+                    <img src="assets/images/visible-symptoms/diarrhea.svg" alt="Nasal Discharge" class="season-icon">
+                    Diarrhea
+                </label>
+
+                <input type="checkbox" class="btn-check" id="btnLimping" autocomplete="off">
+                <label class="btn" for="btnLimping">
+                    <img src="assets/images/visible-symptoms/limping.svg" alt="Nasal Discharge" class="season-icon">
+                    Limping
+                </label>
+
+                <input type="checkbox" class="btn-check" id="btnSwallonUdder" autocomplete="off">
+                <label class="btn" for="btnSwallonUdder">
+                    <img src="assets/images/visible-symptoms/swallon-udder.svg" alt="Nasal Discharge"
+                        class="season-icon">
+                    Swallon Udder
+                </label>
+
+                <input type="checkbox" class="btn-check" id="btnCoughing" autocomplete="off">
+                <label class="btn" for="btnCoughing">
+                    <img src="assets/images/visible-symptoms/coughing.svg" alt="Nasal Discharge" class="season-icon">
+                    Coughing
+                </label>
+            </div>
+        </div>
+
+        <!-- visible symptoms -->
+        <div class="mb-0">
+            <div class="form-label text-purple">Vaccination Status <small class="text-muted fs-70">(Select all that
+                    apply)</small>
+            </div>
+            <div class="btn-group" role="group">
+                <input type="radio" class="btn-check" name="btnVaccStatus" id="btnuptodate" autocomplete="off">
+                <label class="btn" for="btnuptodate">
+                    <img src="assets/images/vacc-status/upto-date.svg" alt="Nasal Discharge" class="season-icon">
+                    Upto date
+                </label>
+
+                <input type="radio" class="btn-check" name="btnVaccStatus" id="btnpartial" autocomplete="off">
+                <label class="btn" for="btnpartial">
+                    <img src="assets/images/vacc-status/partial.svg" alt="Partial" class="season-icon">
+                    Partial
+                </label>
+
+                <input type="radio" class="btn-check" name="btnVaccStatus" id="btnnotdone" autocomplete="off">
+                <label class="btn" for="btnnotdone">
+                    <img src="assets/images/vacc-status/not-done.svg" alt="Not done" class="season-icon">
+                    Not done
                 </label>
             </div>
         </div>
