--- a/src/app/layouts/secure/secure.component.html
+++ b/src/app/layouts/secure/secure.component.html
@@ -3,4 +3,4 @@
 <div class="main-content">
     <router-outlet></router-outlet>
 </div>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
