feat: add new assessment button to prediction result component

--- a/src/app/modules/secure/prediction-result/prediction-result.component.html
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.html
@@ -1,6 +1,12 @@
 <div class="page-header">
     <i class="las la-snowflake"></i>Simulation Analysis
 </div>
+<div class="d-flex justify-content-end mb-3">
+    <button class="btn btn-back d-flex align-items-center gap-1" type="button">
+        <i class="las la-arrow-left fs-90"></i> New Assessment
+    </button>
+</div>
+
 <div class="card rounded-3 form-container border-0 mb-3 form-container">
     <div class="card-header bg-transparent border-bottom-0">
         <div class="d-flex">
