--- a/src/app/layouts/secure/header/header.component.html
+++ b/src/app/layouts/secure/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar bg-body p-2 fixed-top shadow">
     <div class="d-flex align-items-center">
         <i class="lar la-user me-2"></i>
-        <span class="fs-75 text-muted">Welcome User</span>
+        <span class="fs-75 text-muted">Welcome <strong>{{ username }}</strong></span>
     </div>
     <button class="btn btn-logout d-flex align-items-center gap-1" type="button">
         <i class="las la-sign-out-alt fs-90"></i> Logout
