style: add toast container styles for improved notification display

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -251,3 +251,8 @@ body {
     display: block;
     margin: 5px auto;
 }
+
+// #region toast container
+.toast-container {
+    font-size: 0.85rem !important;
+}
