feat: implement AuthGuard for route protection and update header component for dynamic username display

--- a/src/app/layouts/secure/header/header.component.html
+++ b/src/app/layouts/secure/header/header.component.html
@@ -3,7 +3,7 @@
         <i class="lar la-user me-2"></i>
         <span class="fs-75 text-muted">Welcome <strong>{{ username }}</strong></span>
     </div>
-    <button class="btn btn-logout d-flex align-items-center gap-1" type="button">
+    <button class="btn btn-logout d-flex align-items-center gap-1" type="button" (click)="logout()">
         <i class="las la-sign-out-alt fs-90"></i> Logout
     </button>
 </nav>
