feat: update prediction result component to use routerLink for navigation and include RouterModule in imports

--- a/src/app/modules/secure/prediction-result/prediction-result.component.html
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.html
@@ -4,9 +4,9 @@
             <i class="las la-snowflake"></i>Simulation Analysis
         </div>
         <div class="d-flex justify-content-end mb-3">
-            <button class="btn btn-back d-flex align-items-center gap-1" type="button">
+            <a class="btn btn-back d-flex align-items-center gap-1" routerLink="/prediction-form">
                 <i class="las la-arrow-left fs-90"></i> New Assessment
-            </button>
+            </a>
         </div>
 
         <div class="card rounded-3 form-container border-0 mb-3 form-container">
