prediction result page designed

--- a/src/app/modules/secure/prediction-result/prediction-result.component.html
+++ b/src/app/modules/secure/prediction-result/prediction-result.component.html
@@ -9,6 +9,8 @@
             </a>
         </div>
 
+        <h6>{{'Hello : ' + predictionResult?.jsonResult?.AnimalStage || '-'}}</h6>
+
         <div class="card rounded-3 form-container border-0 mb-3 form-container">
             <div class="card-header bg-transparent border-bottom-0">
                 <div class="d-flex">
